table_3/results/FloatingActionButtonSpeedDial-post-nullaway-wpi.txt
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/floating-wpi-post/src/library/src/main/java/com/leinardi/android/speeddial/SpeedDialActionItem.java:249: error: type annotations are not supported in -source 7
    public  @org.checkerframework.checker.initialization.qual.Initialized @org.checkerframework.checker.nullness.qual.NonNull int describeContents(@org.checkerframework.checker.initialization.qual.Initialized @org.checkerframework.checker.nullness.qual.NonNull SpeedDialActionItem this) {
                                                                                                                                                                                                                                                                                         ^
  (use -source 8 or higher to enable type annotations)
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':library:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 770ms
0
